# matrix

./: .clang-format  CMakeLists.txt  compile_commands.json  dnn_mmod_ex.cpp  matrix.cpp  readme  test.cpp
.cache/clangd/index/: dnn_mmod_ex.cpp.B2B834FC50AF0DB9.idx  test.cpp.AA467D12D6DF446E.idx
